2011-08-04  Daniel Dressler <danieru.dressler@gmail.com>

	* driver/ljet4.xml: Removed out-dated example of non-working printer in
	  from comments.

2011-07-22  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Infotec/PXL/Infotec-MP_201_PXL.ppd,
	  PPD/Lanier/PXL/Lanier-MP_201_LD_220_PXL.ppd,
	  PPD/NRG/PXL/NRG-MP_201_PXL.ppd,
	  PPD/Ricoh/PXL/Ricoh-Aficio_MP_201_PXL.ppd,
	  PPD/Savin/PXL/Savin-920_PXL.ppd: Added "-dNOINTERPOLATE" to the
	  Ghostscript command lines, as this makes Ghostscript significantly
	  faster (Ubuntu bug #668800, Ghostscript bug #691755).

2011-07-21  David Williams <dwilliams@ricohsv.com>

	* db/source/PPD/Infotec/PS/Infotec-MP_201_PS.ppd,
	  db/source/PPD/Lanier/PS/Lanier-MP_201_LD_220_PS.ppd,
	  db/source/PPD/NRG/PS/NRG-MP_201_PS.ppd,
          db/source/PPD/Ricoh/PS/Ricoh-Aficio_MP_201_PS.ppd,
	  db/source/PPD/Savin/PS/Savin-920_PS.ppd: Added PS version of 5 new printers.

	* db/source/PPD/Infotec/PXL/Infotec-MP_201_PXL.ppd,
	  db/source/PPD/Lanier/PXL/Lanier-MP_201_LD_220_PXL.ppd,
	  db/source/PPD/NRG/PXL/NRG-MP_201_PXL.ppd,
	  db/source/PPD/Ricoh/PXL/Ricoh-Aficio_MP_201_PXL.ppd,
	  db/source/PPD/Savin/PXL/Savin-920_PXL.ppd: Added PXL of 5 new printers.

        * db/source/printer/Infotec-MP_201.xml,
	  db/source/printer/Lanier-MP_201_LD_220.xml,
          db/source/printer/NRG-MP_201.xml,
          db/source/printer/Ricoh-Aficio_MP_201.xml,
          db/source/printer/Savin-920.xml: Added XML files for 5 new printers.

2011-07-21  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/PM760pX.upp.xml, driver/PM820pX.upp.xml,
	  driver/Postscript1.xml, driver/Stc670pX.upp.xml,
	  driver/Stc680pX.upp.xml, driver/Stc760pX.upp.xml,
	  driver/Stc777pX.upp.xml, driver/Stp720pX.upp.xml,
	  driver/Stp870pX.upp.xml, driver/ap3250.xml, driver/appledmp.xml,
	  driver/bj10.xml, driver/bj10e.xml, driver/bj10v.xml,
	  driver/bj10vh.xml, driver/bj200.xml, driver/bj8XXYYZ.upp.xml,
	  driver/bjc250gs.xml, driver/bjc600.xml, driver/bjc6000X1.upp.xml,