@@ -1,18 +1,48 @@
 <driver id="driver/lx5000">
   <name>lx5000</name>
-  <url>http://www.powerup.com.au/~pbwest/lexmark/lexmark.html</url>
+  <url>http://pbw.id.au/lexmark/lexmark.html</url>
+  <obsolete replace="pbm2l7k" />
   <thirdpartysupplied />
   <execution>
     <ghostscript />
     <prototype>gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -dNOINTERPOLATE -sDEVICE=lx5000 %A%Z -sOutputFile=- -</prototype>
   </execution>
   <comments>
-    <en>This is a beta version of a driver for the Lexmark 5000. It supports
-unidirectional colour printing at 1200x600, 600x600, and 300x600 dpi. One
-can switch between colour and b/w, adjust the cartridges, and choose the
-page drying time.&lt;P&gt;
+    <en> 
 
-The driver is known to work with the Lexmark 5000 and the Z51.</en>
+    This is a beta version of a driver for the Lexmark 5000. It
+    supports unidirectional colour printing at 1200x600, 600x600, and
+    300x600 dpi. One can switch between colour and b/w, adjust the
+    cartridges, and choose the page drying time.&lt;p&gt;
+
+    The driver is known to work with the Lexmark 5000 and the
+    Z51.&lt;p&gt;
+
+    The driver was part of the Ghostscript upstream source code for a
+    long time but recently it was removed from the source code repository
+    for version 9.05 as it does not work reliably
+    any more with current Ghostscript (version 9.04). It causes
+    Ghostscript to hang in an infinite loop on several files, requiring the
+    user to cancel the job. See the &lt;a
+    href="http://bugs.ghostscript.com/show_bug.cgi?id=691820"&gt;Ghostscript
+    bug report&lt;/a&gt;.&lt;p&gt;
+
+    There was no time invested anymore to actually fix the problem as
+    the supported printers are very old, so there will be only very
+    few users and they would rather buy a new, more modern printer
+    instead of making their old Lexmarks work again.&lt;p&gt;
+
+    For everyone who still want to work with the printer and experiment with
+    this driver or even fix it, the original
+    home page of the driver is still available and the latest code of the
+    driver and a copy of the printer's protocol; information is avalable
+    &lt;a
+    href="/download/printing/lx5000/"&gt;here&lt;/a&gt;.&lt;p&gt;
+
+    Use the "&lt;a href="/driver/pbm2l7k"&gt;pbm2l7k&lt;/a&gt;" driver
+    if you want to quickly get these printers to work.&lt;p&gt;
+
+    </en>
   </comments>
   <printers>
     <printer>
