@@ -9,9 +9,9 @@
   <comments>
     <en>
     Should work on Lexmark 57xx, 7xxx, Z51, Z82 (many cases untested
-    due to lack of appropriate printers)&lt;P&gt;
+    due to lack of appropriate printers).&lt;P&gt;
 
-    Black/White printing 600x600 dpi&lt;P&gt;
+    Black/White printing at 600x600 dpi.&lt;P&gt;
 
     Preliminary 600x600 dpi colour printing in CMY and CMYK mode -
     tested on Lexmark 7000.&lt;P&gt;
@@ -24,14 +24,18 @@
     print in colour. For newer versions of Ghostscript there are no
     special memory needs.&lt;P&gt;
 
-    Only 600dpi colour is provided by foomatic yet!&lt;p&gt;
-
-    There is a specially modified snapshot of this driver which will
-    run the Z52. Look for discussion of it on the driver's web page.
-    Foomatic does not support this variant.&lt;p&gt;
+    Only 600dpi color is provided by foomatic yet!&lt;p&gt;
 
     This driver is not maintained any more by its original author. We
     have re-hosted it here on the OpenPrinting web site.&lt;p&gt;
+
+    If you want to know more about these printers and want to make driver
+    with more capabilities, like 1200x600 dpi, have a look at the
+    "&lt;a href="/driver/lx5000"&gt;lx5000&lt;/a&gt;" driver, documentation
+    of the printer's protocol, and maintenance tools &lt;a
+    href="/download/printing/lx5000/"&gt;here&lt;/a&gt;.&lt;p&gt;. Note
+    that the "lx5000" driver does not work reliably, it often makes
+    Ghostscript hang in an infinite loop.&lt;p&gt;
 
   </en>
   </comments>
