@@ -16,7 +16,7 @@
     <proprietary />
   </lang>
   <functionality>D</functionality>
-  <driver>lx5000</driver>
+  <driver>pbm2l7k</driver>
   <comments>
     <en>Works in color and bw at 600  
 Bidirectional/1200dpi printing is not yet supported.
