@@ -24,7 +24,7 @@
     </parallel>
   </autodetect>
   <functionality>D</functionality>
-  <driver>lx5000</driver>
+  <driver>pbm2l7k</driver>
   <comments>
     <en>Known to work with Henryk's l7k driver and the lx5000 driver.</en>
   </comments>
