@@ -16,7 +16,7 @@
     <proprietary />
   </lang>
   <functionality>D</functionality>
-  <driver>lx5000</driver>
+  <driver>pbm2l7k</driver>
   <comments>
     <en>This is a multifunction device with integrated scanner/copier.
     Scanning is not supported by free software, copying works without
