@@ -1,3 +1,14 @@
+2011-08-18  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/lx5000.xml, driver/pbm2l7k.xml, printer/Lexmark-5000.xml,
+	  printer/Lexmark-Z51.xml, printer/Lexmark-Z82.xml: The "lx5000"
+          driver got removed from the Ghostscript source repository as it
+          often causes Ghostscript to hang in an infinite loop. Therefore
+	  updated the texts of "lx5000" and the alternative driver "pbm2l7k",
+	  marked "lx5000" obsolete with "pbm2l7k" as replacement, and changed
+	  the recommended driver of the printer for which "lx5000" was
+	  recommended to "pbm2l7k".
+
 2011-08-04  Daniel Dressler <danieru.dressler@gmail.com>
 
 	* driver/ljet4.xml: Removed out-dated example of non-working printer in
